# controllers/orderDetails.controllers.js
@@ -1,4 +1,5 @@
 const { Order_Details, Order, User, Product_Size, sequelize } = require('../models')
+const bcrypt = require('bcrypt')
 const getAllOrderDetails = async (req, res) => {
     const allOrderDetails = await Order_Details.findAll({
         include: [
@@ -73,8 +74,24 @@ const deleteOrderDetails = async (req, res) => {
     res.status(200).send("Đã Xóa")
 }
 const postOrder = async (req, res) => {
-    const { user_ID, fullname, email, phone, address, note, arr } = req.body
+    const { user_ID, fullname, email, phone, address, note, arr , password} = req.body
+    if(password) {
+        // const { fullname, email, phone, address, password } = req.body
 
+    const user = await User.findOne({
+        where: {
+            email
+        }
+    })
+    if (user) {
+        res.status(404).send({ error: "Email Đã Tồn Tại" })
+    } else {
+        const salt = bcrypt.genSaltSync(3);
+        const hashPassword = bcrypt.hashSync(password, salt)
+        const newUser = await User.create({ fullname, email, phone, address, password: hashPassword })
+        res.status(201).send(newUser)
+        return  user_ID = newUser.id
+    }
     const createOrder = await Order.create({ user_ID, fullname, email, phone, address, note })
     
     for (let i = 0; i < arr.length; i++) {
@@ -86,12 +103,12 @@ const postOrder = async (req, res) => {
                 where product_sizes.product_ID = ${arr[i].product_ID} and product_sizes.size_ID = ${arr[i].size_ID}
                 `
             )
-    
+            
             const productSizes = getProductSizes[0].id
-    
-    
+            
+            
             await Order_Details.create({ order_ID: createOrder.id, price: arr[i].price, number: arr[i].number, productSize: productSizes })
-    
+            
             const updateAmount = await Product_Size.findOne({
                 where: {
                     id : productSizes
@@ -101,6 +118,7 @@ const postOrder = async (req, res) => {
             await updateAmount.save()
         }
         res.status(201).send({messgage : 'Đặt Hàng Thành Công', createOrder})
+    }
 }
 module.exports = {
     getAllOrderDetails,
